# monique-monosynth

./: .clang-format  .gitignore  .gitmodules  AUTHORS  BUGS.txt  CMakeLists.txt  DEBUG-NOTES.txt  GIT-NOTES.txt  JUCE_5_3_0_patches_hacks_for_Monique.patch  LICENSE  PROFILE-NOTES.txt  PROJECT-Monique.kdev4  README.md  azure-pipelines.yml
.github/workflows/: build-pr.yml  build-release.yml  code-checks.yml  prepare-for-juce.yml
.kdev4/: PROJECT-Monique.kdev4
ASIOSDK2.3/: changes.txt  readme.txt
ASIOSDK2.3/common/: asiodrvr.cpp  debugmessage.cpp  register.cpp
ASIOSDK2.3/host/: ASIOConvertSamples.cpp  ASIOConvertSamples.h
Files/: DARK.mcol  FACTORTY DEFAULT.mlprog  INITER.mlprog
Files/A/: A AUTOMATED ONE.mlprog  A BASS.mlprog  A BIT BEAUTIFUL.mlprog  A BROKEN FLUTE.mlprog  AMBIENT 1.mlprog  AMBIENT 10.mlprog  AMBIENT 11.mlprog  AMBIENT 4.mlprog  AMBIENT 6.mlprog  AMBIENT 7.mlprog  AMBIENT 9.mlprog  BASS 1.mlprog  BASS 2.mlprog  BASS 3.mlprog  BASS PULSE.mlprog  BASSIE 1.mlprog  BUZZ 2.mlprog  CRANK.mlprog  CYBORG DISCO.mlprog  E-MONICA.mlprog  EMPTY.mlprog  EQ SWING 3.mlprog  FACTORTY DEFAULT.mlprog  FALLING.mlprog  HASHTAG.mlprog  HORSES.mlprog  ITS ALIVE.mlprog  JUNGLE.mlprog  LEADER 12.mlprog  LEADER 13.mlprog  LEADER 15.mlprog  LEADER 17.mlprog  LEADER 2.mlprog  LEADER 5.mlprog  LEADER 9.mlprog  LONG SYNC.mlprog  LOST IN FM SPACE 2.mlprog  MACHINE.mlprog  MINOR 2.mlprog  OSC RETUNE.mlprog  (+8 more)
Files/B/: Yemski Basic Raver.mlprog  Yemski Beast-Mode.mlprog  Yemski Bendy.mlprog  Yemski Drifting.mlprog  Yemski Eurorack.mlprog  Yemski Evil Puppet.mlprog  Yemski Falling.mlprog  Yemski Hairy Growler.mlprog  Yemski Hard-Nut.mlprog  Yemski I Am The Danger.mlprog  Yemski Jungle Bruv.mlprog  Yemski Meaty.mlprog  Yemski Mutator.mlprog  Yemski Otherworlds.mlprog  Yemski Phat Gen.mlprog  Yemski Poly-Slide.mlprog  Yemski The Damager.mlprog  Yemski Throbber.mlprog  Yemski Tish Boom.mlprog  Yemski Top-Layer-Bass.mlprog  Yemski Triplets Of Doom.mlprog  Yemski-Didge .mlprog  Yemski-Harsh-Sweep.mlprog  Yesmki Teknical.mlprog  Yesmki Wibble-Wobble.mlprog
Files/Themes/: BLUES.mcol  DARK.mcol  MATRIX.mcol  RED.mcol
Images/: logo.xcf  monique-sketch-1.xcf  monique-sketch-5.xcf  monique-sketch-6.xcf
Installer/: Pro64x_poly.iss
Installer/Mac/: ._MAC-LICENCE-DMG.txt  ._README.txt  ._SYSTEM REQUIREMENTS.txt  ._Untitled.dmg  ._licenseDMG.py  .bg.xcf  LICENSE.txt  MAC-LICENCE-DMG.txt  SYSTEM REQUIREMENTS.txt
Installer/Monique/: COPY-VST-64-TO-SYSTEM-VST-FOLDER  EnergyXT2.txt
Installer/Monique_103_released/: COPY-VST-32-TO-SYSTEM-VST-FOLDER  INSTALL.txt
Installer/Windows/: LICENSE.rtf  README.txt  aax_maker.txt
JUCE-3.1.1/.kdev4/: JUCE-3.1.1.kdev4
JUCE-4.0.1/: JUCE-3.1.1.kdev4
JUCE-4.3.1/: ChangeList.txt
JUCE-4.3.1/modules/: JUCE Module Format.txt
Manual/: TODO.txt  amp_envelope_and_eq.xcf  envelope_retrigger.xcf  envelope_retrigger_2.xcf  envelope_shape.xcf  fm.xcf  fm_oszi.xcf  manual_1_deutsch_neu_neu.odt  manual_1_english_notes.txt  manual_1_german.doc  manuel_1_english.edit.1.2.doc  morph_editor.xcf  osc2_in_filter1_route_filter2.xcf  oscillators.xcf  synced_oscillators.xcf
Manual/MANUAL_ENG_001/: manual_1.doc  manual_1.odt
Plugin/: Monique-Plugin-AU.jucer  Monique-Plugin-VST.jucer  Monique-Plugin.kdev4
Plugin_AU/: Monique-Plugin-VST.jucer
Source/: App.h  AppInstanceStore.cpp  AppInstanceStore.h  App_h_includer.h  PluginProcessor.cpp  PluginProcessor.h  Synth.cpp  Synth.h  SynthData.cpp  SynthData.h  UI_MoveEvent2ChildsComponent.h  UiDragPad.cpp  UiDragPad.h  UiDynamicSizeEnd.h  UiDynamicSizeStart.h  UiEditorColours.cpp  UiEditorColours.h  UiEditorMIDIIO.cpp  UiEditorMIDIIO.h  UiEditorMorph.cpp  UiEditorMorph.h  UiEditorSettings.cpp  UiEditorSettings.h  UiEditorSynthLite.cpp  UiEditorSynthLite.h  UiEditorSynthLiteConfig.h  UiEditorSynthLitePopup.cpp  UiEditorSynthLitePopup.h  UiLookAndFeel.cpp  UiLookAndFeel.h  _CHANGELOG  dRowAudio_AudioUtility.h  dRowAudio_Constants.h  dRowAudio_EnvelopeFollower.h  dRowAudio_GraphicalComponent.cpp  dRowAudio_GraphicalComponent.h  dRowAudio_MathsUtilities.h  dRowAudio_OnePoleFilter.cpp  dRowAudio_OnePoleFilter.h  dRowAudio_SegmentedMeter.cpp  (+76 more)
Spec/: aax.xcf  au.xcf
Standalone/: Monique-Standalone.jucer  Monique-Standalone.kdev4
Standalone/Source/: Main.cpp  juce_StandaloneFilterWindow.h  resources-demo.rc  resources.rc
VST3 SDK/: index.html
VST3 SDK/doc/: VST3_License_Agreement.html  VST3_License_Agreement.rtf  index.html  sdk.firstpage.html  sdk.menu.html  sdk.overview.html
cmake/: basic_installer.cmake  versiontools.cmake
iPad/: Untitled.xcf
libs/oddsound-mts/: CMakeLists.txt
resources/Images/: monique-sketch-4.xcf
resources/files/: DARK.mcol  FACTORTY DEFAULT.mlprog  parameterlist.ods
resources/icon/: monique_1024x1024  test.xcf
resources/images/: monique-sketch-2.xcf  monique-sketch-3.xcf
resources/installer/: ._MAC-LICENCE-DMG.txt  ._Monique_103.dmg  ._Monique_1091.dmg  ._licenseDMG.py  Pro64x.iss  ZipReadme.txt
resources/installer_mac/: License.txt  Readme.rtf  icns.rsrc
resources/installer_win/: monique32.iss  monique64.iss
resources/manual/: .directory  amp_envelope.xcf  amp_envelope_and_fx.xcf  arp.xcf  envelope.xcf  indexTR.php  lfo.xcf  manual_1_english_corrected.odt  manual_1_english_corrected.txt  mod_mix.xcf  morph.xcf  slider_concept.xcf
resources/spec/: Spec.rtf  linux.xcf  mac_os_x.xcf  vst.xcf  vst3.xcf  windows.xcf
src/: App.h  version.cpp.in  version.h
src/core/: dRowAudio_Constants.h  monique_core_Datastructures.cpp  monique_core_Datastructures.h  monique_core_Parameters.cpp  monique_core_Parameters.h  monique_core_Processor.cpp  monique_core_Processor.h  monique_core_Synth.cpp  monique_core_Synth.h  mono_AudioDeviceManager.cpp  mono_AudioDeviceManager.h
src/ui/: monique_ui_AmpPainter.cpp  monique_ui_AmpPainter.h  monique_ui_Credits.cpp  monique_ui_Credits.h  monique_ui_DragPad.cpp  monique_ui_DragPad.h  monique_ui_ENVPopup.cpp  monique_ui_ENVPopup.h  monique_ui_GlobalSettings.cpp  monique_ui_GlobalSettings.h  monique_ui_Info.cpp  monique_ui_Info.h  monique_ui_LookAndFeel.cpp  (+26 more)
(+4523 files in other folders)
